[gd_scene load_steps=18 format=2]

[ext_resource path="res://parallax.gd" type="Script" id=1]
[ext_resource path="res://space_noise/space_noise_1.tres" type="Material" id=2]
[ext_resource path="res://stars/stars.png" type="Texture" id=3]
[ext_resource path="res://space_noise/space_noise_0.tres" type="Material" id=4]
[ext_resource path="res://space_noise/space_noise_2.tres" type="Material" id=5]
[ext_resource path="res://stars/stars.shader" type="Shader" id=6]
[ext_resource path="res://ui_font/Tomorrow-SemiBold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui_font/Tomorrow-Medium.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://icon_font/icon_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://enter_name.gd" type="Script" id=10]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 6 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 12, 12, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 6 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 0.0
shader_param/uv1_scale = Vector3( 10, 10, 1 )
shader_param/uv1_offset = Vector3( 4.487, -10.587, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/texture_albedo = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 62
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 8 )

[node name="EnterName" type="Spatial"]
script = ExtResource( 10 )
player_name_path = NodePath("GUI/player_name")

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.054644, 0, 0.5 )
keep_aspect = 0
projection = 1
current = true
far = 10.0

[node name="space_noise" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="space_noise_0" type="MeshInstance" parent="Camera/space_noise"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -3 )
mesh = SubResource( 1 )
material/0 = ExtResource( 4 )
script = ExtResource( 1 )
speed = 0.06

[node name="space_noise_1" type="MeshInstance" parent="Camera/space_noise"]
transform = Transform( 1.5, 0, 0, 0, -4.37114e-08, -1.5, 0, 1, -6.55671e-08, 0, 0, -2 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )
script = ExtResource( 1 )
speed = 0.05

[node name="space_noise_2" type="MeshInstance" parent="Camera/space_noise"]
transform = Transform( 2, 0, 0, 0, -4.37114e-08, -2, 0, 1, -8.74228e-08, 0, 0, -1 )
mesh = SubResource( 1 )
material/0 = ExtResource( 5 )
script = ExtResource( 1 )
speed = 0.01

[node name="stars" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="stars_0" type="MeshInstance" parent="Camera/stars"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )
script = ExtResource( 1 )
speed = 0.01

[node name="stars_1" type="MeshInstance" parent="Camera/stars"]
transform = Transform( 1.1, 0, 0, 0, -4.80825e-08, -1.1, 0, 1.1, -4.80825e-08, 0, 0, -1 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )
script = ExtResource( 1 )
speed = 0.05

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.396038, 0.59109, -0.702685, -0.532465, 0.771291, 0.3487, 0.748088, 0.236057, 0.620195, 0, 0, 0 )
directional_shadow_mode = 0

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="GUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -140.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 5 )
text = "Enter name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_name" type="LineEdit" parent="GUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 55.0
margin_top = -52.0
margin_right = -55.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 6 )
align = 1
placeholder_text = "Anon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accept_button" type="Button" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = 87.0
margin_right = 231.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 7 )
text = "ACCEPT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="Button" parent="GUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.403922, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "<"
flat = true
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="GUI/player_name" to="." method="_on_player_name_text_entered"]
[connection signal="pressed" from="GUI/accept_button" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="GUI/back_button" to="." method="_on_back_button_pressed"]
